Affichage du label de la collection/référence sélectionnée dans l'écran